--- a/android/TKMS/app/src/main/res/values/strings.xml
+++ b/android/TKMS/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">TKMS</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_maps">Home</string>
 </resources>
