--- a/android/TKMS/app/src/main/res/values/strings.xml
+++ b/android/TKMS/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="address_word">Address</string>
     <string name="more_details_word">click for more details</string>
     <string name="events_word">Events</string>
+    <string name="checkin">Check-in at </string>
 </resources>
