--- a/android/TKMS/app/src/main/res/values/strings.xml
+++ b/android/TKMS/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="events_word">Events</string>
     <string name="checkin">Check-in at </string>
     <string name="uncheck">Undo checkin at</string>
+    <string name="recent">Recent</string>
 </resources>
