--- a/android/TKMS/app/src/main/res/values/strings.xml
+++ b/android/TKMS/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">TKMS</string>
     <string name="title_activity_maps">Home</string>
     <string name="address_word">Address</string>
-    <string name="more_details_word">click for more details</string>
+    <string name="more_details_word">อ่านเพิ่มเติม</string>
     <string name="events_word">Events</string>
     <string name="checkin">Check-in at </string>
     <string name="uncheck">Undo checkin at</string>
