--- a/android/TKMS/app/src/main/res/values/strings.xml
+++ b/android/TKMS/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Tamroy</string>
+    <string name="app_name">FooF</string>
     <string name="title_activity_maps">Home</string>
     <string name="address_word">Address</string>
     <string name="more_details_word">อ่านเพิ่มเติม</string>
