- แก้แผนที่ในหน้า edit place ให้ long press ได้ - เลือก place category ได้ - แผนที่ในหน้า edit place แสดงตำแหน่ง device by default

--- a/android/TKMS/app/src/main/res/values/strings.xml
+++ b/android/TKMS/app/src/main/res/values/strings.xml
@@ -11,5 +11,8 @@
     <string name="place_description_title">Place description</string>
     <string name="place_name_text">Place name</string>
     <string name="add_event_button_des">Add event button</string>
+    <string name="your_description_of_this_place">Your description of this place</string>
+    <string name="search_for_the_place">Search for the place</string>
+    <string name="done">Done !</string>
 
 </resources>
